# django-test-curl

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  release.yml
django_test_curl/: __init__.py  django_test_curl.py  test_django_test_curl.py
