[tool.poetry]
name = "django-test-curl"
version = "0.1.2"
description = "Write Django test requests using curl syntax"
authors = ["crccheck <oss@crccheck.com>"]
license = "Apache-2.0"
readme = "README.md"

repository = "https://github.com/crccheck/django-test-curl"

keywords = ["django", "curl", "tests"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
django = "^3.2.2"
flake8 = "^3.9.2"
mypy = "^0.812"
black = "^21.5b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.semantic_release]
branch = "master"
version_toml = "pyproject.toml:tool.poetry.version"
version_variable = "django_test_curl/__init__.py:__version__"
build_command = "pip install poetry && poetry build"
